# werehous_management_api_fastapi

./: .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
fastpi-app/: alembic.ini  main.py
fastpi-app/alembic/: env.py
fastpi-app/alembic/versions/: 2024_09_24_2130-65f28d0ee821_create_product_table.py  2024_09_24_2300-2c8f6a5f05cb_create_order_table.py  2024_09_25_0112-8c124ef40aeb_create_asociate_orderitem_table.py  2024_09_29_1752-8e2f2b693e39_create_product_table.py  2024_09_29_1826-70c70f3fe4fe_create_new_order_table.py  2024_09_29_1847-2ad4d8ef8a59_create_association_order_product_table.py
fastpi-app/api/: __init__.py  validators.py
fastpi-app/api/endpoints/: order.py  product.py
fastpi-app/core/: __init__.py  config.py  db.py
fastpi-app/crud/: __init__.py  base.py  order.py  product.py
fastpi-app/models/: __init__.py  associated.py  base.py  order.py  product.py  warehous.py
fastpi-app/schemas/: __init__.py  order.py  product.py
